<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPatientActivity">

    <me.ibrahimsn.particle.ParticleView
        android:id="@+id/particleRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:backgroundColor="@android:color/white"
        app:maxParticleRadius="3"
        app:minParticleRadius="3"
        app:particleColor="@color/colorPrimary"
        app:particleCount="8" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutHeader"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/gradient_home"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtDashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/patient"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutHeader">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingButtonVisit"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_add_white_24dp"
            app:backgroundTint="@color/colorPrimary"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@android:color/white" />

        <TextView
            android:id="@+id/txtReference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/patient_reference"
            app:layout_constraintBottom_toTopOf="@+id/txtLastname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtLastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_lastname"
            app:layout_constraintBottom_toTopOf="@+id/txtFirstname"
            app:layout_constraintStart_toStartOf="@+id/txtReference"
            app:layout_constraintTop_toBottomOf="@+id/txtReference" />

        <TextView
            android:id="@+id/txtFirstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_firstname"
            app:layout_constraintBottom_toTopOf="@+id/txtVisits"
            app:layout_constraintStart_toStartOf="@+id/txtReference"
            app:layout_constraintTop_toBottomOf="@+id/txtLastname" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/visitsRecycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="164dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtVisits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_historique"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/visitsRecycler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtFirstname" />

        <ProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/visitsRecycler"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>